[package]
name = "vec-x"
version = "0.6.0"
authors = ["azishio"]
edition = "2021"
description = "Provides a structure `VecX` to manage fixed-length arrays, supporting numeric operations and assignment operations between `VecX` and scalar values."

documentation = "https://docs.rs/vec-x"
homepage = "https://crates.io/crates/vec-x"
repository = "https://github.com/azishio/vec-x-rs"

readme = "README.md"

keywords = ["vec", "array", "index", "fixed-length"]
categories = ["compression", "data-structures", "mathematics"]
license = "MIT OR Apache-2.0"

[dependencies]
fxhash = "0.2.1"
indexmap = "2.2.6"
num = "0.4.3"
